--- a/ldap-docker-project/docker-compose.yml
+++ b/ldap-docker-project/docker-compose.yml
@@ -2,28 +2,28 @@ version: '3'
 services:
   ldap-server:
     image: osixia/openldap:1.5.0
-    container_name: ldap-server
+    ports:
+      - "389:389"
+      - "636:636"
     environment:
       LDAP_ORGANISATION: "Example Org"
       LDAP_DOMAIN: "master-ldap.com"
       LDAP_ADMIN_PASSWORD: "adminpassword"
-    ports:
-      - "389:389"
-      - "636:636"
+    volumes:
+      - ./ldap/data:/var/lib/ldap
+      - ./ldap/config:/etc/ldap/slapd.d
+      - ./ldap/bootstrap.ldif:/container/service/slapd/assets/config/bootstrap.ldif
 
   nginx-server:
-    image: tiredofit/nginx-ldap
-    container_name: nginx-server
+    image: tiredofit/nginx-ldap:latest
+    ports:
+      - "8080:80"
     depends_on:
       - ldap-server
     environment:
-      LDAP_SERVER: "ldap://ldap-server:389"
-      LDAP_BASE_DN: "dc=master-ldap,dc=com"
-      LDAP_BIND_DN: "cn=admin,dc=master-ldap,dc=com"
-      LDAP_BIND_PW: "adminpassword"
-      LDAP_REQUIRE_GROUP: "false"
-    ports:
-      - "8080:80"
+      - LDAP_HOST=ldap-server
+      - LDAP_PORT=389
+      - LDAP_BASE=dc=master-ldap,dc=com
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./html:/usr/share/nginx/html
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/html:/usr/share/nginx/html
