--- a/ldap-docker-project/nginx/nginx.conf
+++ b/ldap-docker-project/nginx/nginx.conf
@@ -1,15 +1,16 @@
-user root;  # Modified to run NGINX as root
-worker_processes 1;
+user root;
+worker_processes  1;
 
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    sendfile on;
-    keepalive_timeout 65;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    sendfile        on;
+    keepalive_timeout  65;
 
     ldap_server ldap {
         url ldap://ldap-server:389/dc=master-ldap,dc=com?uid?sub?(objectClass=posixAccount);
@@ -21,12 +22,12 @@ http {
     }
 
     server {
-        listen 80;
-        server_name localhost;
+        listen       80;
+        server_name  localhost;
 
         location / {
-            root /usr/share/nginx/html;
-            index index.html;
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
             auth_ldap "LDAP Authentication";
             auth_ldap_servers ldap;
         }
