--- a/ldap-docker-project/docker-compose.yml
+++ b/ldap-docker-project/docker-compose.yml
@@ -15,3 +15,6 @@ services:
     build: ./nginx
     ports:
       - "8080:80"
+    depends_on:
+      - ldap-server
+    command: ["nginx", "-g", "daemon off;"]
