--- a/ldap-docker-project/ldap/Dockerfile
+++ b/ldap-docker-project/ldap/Dockerfile
@@ -1,2 +1,4 @@
 FROM osixia/openldap:1.5.0
+
+# Copy the LDIF file to the correct location for initialization
 COPY bootstrap.ldif /container/service/slapd/assets/config/bootstrap.ldif
