--- a/ldap-docker-project/nginx/Dockerfile
+++ b/ldap-docker-project/nginx/Dockerfile
@@ -1,2 +1,7 @@
 FROM tiredofit/nginx-ldap
+
+# Copy the NGINX config
 COPY nginx.conf /etc/nginx/nginx.conf
+
+# Copy the HTML page to be served
+COPY index.html /usr/share/nginx/html/index.html
