--- a/ldap-docker-project/nginx/Dockerfile
+++ b/ldap-docker-project/nginx/Dockerfile
@@ -12,5 +12,8 @@ COPY monitor.sh /usr/local/bin/monitor.sh
 # Make the monitoring script executable
 RUN chmod +x /usr/local/bin/monitor.sh
 
+# Create the log directory
+RUN mkdir -p /var/log/monitoring
+
 # Run the monitoring script in the background and start NGINX
 CMD /usr/local/bin/monitor.sh & nginx -g 'daemon off;'
